fix select for new materialize

--- a/plugins/CoreVisualizations/angularjs/series-picker/series-picker.component.html
+++ b/plugins/CoreVisualizations/angularjs/series-picker/series-picker.component.html
@@ -40,12 +40,14 @@
             class="pickRow"
             ng-click="$ctrl.optionSelected(rowConfig.matcher, $ctrl.rowStates)"
         >
-            <input
-                class="select"
-                ng-checked="$ctrl.rowStates[rowConfig.matcher]"
-                ng-attr-type="{{ $ctrl.multiselect ? 'checkbox' : 'radio' }}"
-            />
-            <label>{{ rowConfig.label }}</label>
+            <label>
+                <input
+                    class="select"
+                    ng-checked="$ctrl.rowStates[rowConfig.matcher]"
+                    ng-attr-type="{{ $ctrl.multiselect ? 'checkbox' : 'radio' }}"
+                />
+                <span>{{ rowConfig.label }}</span>
+            </label>
         </p>
     </div>
 </div>
