Fix focus color of select fields

--- a/plugins/Morpheus/stylesheets/general/_forms.less
+++ b/plugins/Morpheus/stylesheets/general/_forms.less
@@ -126,3 +126,7 @@ abbr[title] {
   border-bottom: 1px dotted;
   text-decoration: none;
 }
+
+.select-wrapper input.select-dropdown:focus {
+  border-bottom-color: @theme-color-brand;
+}
