Add Template.confirmPasswordContent event

--- a/plugins/Login/templates/confirmPassword.twig
+++ b/plugins/Login/templates/confirmPassword.twig
@@ -7,6 +7,7 @@
         {% embed 'contentBlock.twig' with {'title': ('Login_ConfirmPasswordToContinue'|translate)} %}
         {% block content %}
 
+            {{ postEvent("Template.confirmPasswordContent", "top") }}
             <div class="message_container">
                 {% if AccessErrorString %}
                     <div piwik-notification
@@ -36,6 +37,8 @@
                 </div>
 
             </form>
+            {{ postEvent("Template.confirmPasswordContent", "bottom") }}
+
         {% endblock %}
         {% endembed %}
     </div>
