--- a/plugins/CoreHome/stylesheets/layout.less
+++ b/plugins/CoreHome/stylesheets/layout.less
@@ -3,6 +3,14 @@
   margin-bottom: 0;
 }
 
+ul.browser-default {
+  list-style-type: disc;
+  li {
+    margin-left: 15px;
+    list-style-type: disc;
+  }
+}
+
 nav {
   background-color: @theme-color-header-background !important;
 
