--- a/plugins/CoreHome/templates/_donate.twig
+++ b/plugins/CoreHome/templates/_donate.twig
@@ -9,7 +9,7 @@
         {% endif %}
     </div>
 
-    <span id="piwik-worth">{{ 'CoreHome_FindUsOn'|translate }}</span>
+    <span id="piwik-worth">{{ 'CoreHome_SupportUsOn'|translate }}</span>
 
     <ul class="browser-default">
         <li><a href="https://www.patreon.com/matomo" target="_blank" rel="noreferrer noopener">Patreon</a></li>
