--- a/plugins/Morpheus/stylesheets/main.less
+++ b/plugins/Morpheus/stylesheets/main.less
@@ -489,12 +489,11 @@ div.dataTableVizHtmlTable:not(.dataTableActions),
  div.dataTableVizGoals {
   tr.subDataTable > td > span.label::before {
     display: inline-block;
-    float: left;
     top: 0;
     width: 12px;
     height: 12px;
     margin-left: -2px;
-    margin-top: 3px;
+    margin-bottom: -3px;
     margin-right: 8px;
     content: '';
   }
