Move datatable icons to matomo font

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -49,11 +49,11 @@ table.dataTable img {
   margin-left: 0.5em;
 }
 
-table.dataTable tr img.link {
+table.dataTable tr td .icon-outlink {
+  color: #aaa;
   margin-right: 0.5em;
-  margin-bottom: 4px;
   vertical-align: text-bottom;
-  margin-left: 1px;
+  .font-default(13px, 16px);
 }
 
 table.dataTable tr.subDataTable {
