--- a/plugins/Morpheus/stylesheets/main.less
+++ b/plugins/Morpheus/stylesheets/main.less
@@ -484,26 +484,24 @@ table.dataTable {
   }
 }
 
-div.dataTableVizHtmlTable:not(.dataTableActions),
+div.dataTableVizHtmlTable,
  div.dataTableVizAllColumns,
  div.dataTableVizGoals {
   tr.subDataTable > td > span.label::before {
-    display: inline-block;
-    top: 0;
-    width: 12px;
-    height: 12px;
-    margin-left: -2px;
-    margin-bottom: -3px;
+    font-family: 'matomo' !important;
+    .font-default(13px, 16px);
+    color: #aaa;
     margin-right: 8px;
     content: '';
+    vertical-align: bottom;
   }
 
   tr.subDataTable:not(.expanded) > td > span.label::before {
-    background-image: url(plugins/Morpheus/images/plus.png);
+    content: "\f196"; // see .icon-plus-square
   }
 
   tr.subDataTable.expanded > td > span.label::before {
-    background-image: url(plugins/Morpheus/images/minus.png);
+    content: "\f147"; // see .icon-minus-square
   }
 }
 
@@ -698,4 +696,8 @@ tr:hover #token_auth {
 
 .ui-tooltip {
   z-index: 9999;
+}
+
+.icon-delete:hover {
+  color: #d4291f !important;
 }
