--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -52,7 +52,7 @@ table.dataTable img {
 table.dataTable tr td .icon-outlink {
   color: #aaa;
   margin-right: 0.5em;
-  vertical-align: text-bottom;
+  vertical-align: bottom;
   .font-default(13px, 16px);
 }
 
@@ -508,23 +508,8 @@ tr.level12 td.label {
   padding-left: 9em !important;
 }
 
-/* less right margins for the link image in the Pa*/
-.dataTableActions table.dataTable img.link {
-  margin-left: 4px !important;
-
-  .widget & {
-    margin-left: 1px !important;
-  }
-}
-
 table.dataTable td.label img {
   max-height: 16px; 
-}
-
-tr td.label img.plusMinus {
-  margin-left: -3px;
-  margin-right: 6px;
-  margin-top: 0;
 }
 
 .pk-emptyDataTable {
