--- a/plugins/Morpheus/stylesheets/main.less
+++ b/plugins/Morpheus/stylesheets/main.less
@@ -485,6 +485,7 @@ table.dataTable {
 }
 
 div.dataTableVizHtmlTable,
+ div.dataTableVizPerformanceColumns,
  div.dataTableVizAllColumns,
  div.dataTableVizGoals {
   tr.subDataTable > td > span.label::before {
