--- a/plugins/MultiSites/angularjs/dashboard/dashboard.directive.less
+++ b/plugins/MultiSites/angularjs/dashboard/dashboard.directive.less
@@ -176,7 +176,7 @@
     a {
       width: auto;
       float: left;
-      margin-right: 0.5em;
+      padding-right: 0.5em;
     }
   }
   td.multisites-label a:hover {
