improve css so it looks good on all os/browser

--- a/plugins/CoreHome/stylesheets/dataTable/_comparisonsTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_comparisonsTable.less
@@ -29,6 +29,7 @@
   td.label .prefix-numeral {
     display: inline-block;
     width: 20px;
+    .font-default(13px, 18px)
   }
 
   .totalsRow,.summaryRow {
