--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -40,7 +40,7 @@ table.subDataTable td.label {
 
 table.dataTable img,
 table.subDataTable img {
-  vertical-align: middle;
+  vertical-align: text-bottom;
 }
 
 table.dataTable img {
@@ -54,6 +54,8 @@ table.dataTable tr td .icon-outlink {
   margin-right: 0.5em;
   vertical-align: bottom;
   .font-default(13px, 16px);
+  padding-left: 1px;
+  display: inline-block;
 }
 
 table.dataTable tr.subDataTable {
@@ -121,7 +123,7 @@ table.dataTable th.columnSorted {
 }
 
 table.dataTable td {
-  padding: 5px 0px 5px 12px;
+  padding: 5px 0 5px 12px;
   background: @theme-color-background-base;
   z-index: 99;
 }
