--- a/plugins/CoreHome/stylesheets/dataTable/_comparisonsTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_comparisonsTable.less
@@ -29,7 +29,8 @@
   td.label .prefix-numeral {
     display: inline-block;
     width: 20px;
-    .font-default(13px, 18px)
+    .font-default(13px, 18px);
+    vertical-align: text-bottom;
   }
 
   .totalsRow,.summaryRow {
