--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -18,6 +18,8 @@
     text-align: right;
     margin-right: 4px;
     font-weight: normal;
+    .font-default(13px, 18px);
+    vertical-align: text-bottom;
   }
 
   td.highlight > .ratio {
@@ -53,7 +55,7 @@ table.dataTable tr td .icon-outlink {
   color: #aaa;
   margin-right: 0.5em;
   vertical-align: bottom;
-  .font-default(13px, 16px);
+  .font-default(13px, 18px);
   padding-left: 1px;
   display: inline-block;
 }
