Adjust multisites data table

--- a/plugins/Morpheus/stylesheets/main.less
+++ b/plugins/Morpheus/stylesheets/main.less
@@ -389,6 +389,10 @@ table.dataTable {
       color: @theme-color-text;
       background: @theme-color-background-contrast;
 
+      &:not(.value) {
+        font-size: 13px;
+      }
+
       .label {
         .font-default(13px, 18px);
         height: 18px;
