--- a/plugins/Morpheus/stylesheets/main.less
+++ b/plugins/Morpheus/stylesheets/main.less
@@ -499,6 +499,13 @@ div.dataTableVizHtmlTable,
  div.dataTableVizGoals {
   tr.subDataTable > td > span.label::before {
     font-family: 'matomo' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     .font-default(13px, 18px);
     color: #aaa;
     margin-right: 8px;
