--- a/plugins/PrivacyManager/templates/privacySettings.twig
+++ b/plugins/PrivacyManager/templates/privacySettings.twig
@@ -56,6 +56,13 @@
              inline-help="{{ 'PrivacyManager_AnonymizeOrderIdNote'|translate|e('html_attr') }}">
         </div>
 
+        <div piwik-field uicontrol="checkbox" name="forceCookielessTracking"
+             ng-model="anonymizeIp.forceCookielessTracking"
+             data-title="{{ 'PrivacyManager_ForceCookielessTracking'|translate|e('html_attr') }}"
+             value="{{ anonymizeIP.forceCookielessTracking }}"
+             inline-help="{{ 'PrivacyManager_ForceCookielessTrackingDescription'|translate|e('html_attr') }}">
+        </div>
+
         <div piwik-field uicontrol="select" name="anonymizeReferrer"
              ng-model="anonymizeIp.anonymizeReferrer"
              options='{{ referrerAnonymizationOptions|json_encode|e('html_attr') }}'
