--- a/plugins/Installation/templates/finished.twig
+++ b/plugins/Installation/templates/finished.twig
@@ -28,8 +28,8 @@
     {% endif %}
 
     <h3>Performance Settings</h3>
-    <p>{{ 'Installation_PerformanceSettingsDesc1'|translate('<a href="https://matomo.org/docs/setup-auto-archiving/" rel="noreferrer noopener">', '</a>')|raw }}</p>
-    <p>{{ 'Installation_PerformanceSettingsDesc2'|translate('<a href="https://matomo.org/docs/setup-auto-archiving/" rel="noreferrer noopener">', '</a>')|raw }}</p>
+    <p>{{ 'Installation_PerformanceSettingsDesc1'|translate('<a href="https://matomo.org/docs/setup-auto-archiving/" rel="noreferrer noopener" target="_blank">', '</a>')|raw }}</p>
+    <p>{{ 'Installation_PerformanceSettingsDesc2'|translate('<a href="https://matomo.org/docs/setup-auto-archiving/" rel="noreferrer noopener" target="_blank">', '</a>')|raw }}</p>
 
     <h3>{{ 'Installation_DefaultSettings'|translate }}</h3>
     <p>{{ 'Installation_DefaultSettingsHelp'|translate }}</p>
