--- a/plugins/SegmentEditor/templates/_segmentSelector.twig
+++ b/plugins/SegmentEditor/templates/_segmentSelector.twig
@@ -56,10 +56,10 @@
                     </strong></div>
                 {{ 'General_And'|translate }} <div class="auto_archive"><strong>
                         <select class="auto_archive_select">
-                            {% if createRealTimeSegmentsIsEnabled or isBrowserArchivingEnabled %}
+                            {% if isBrowserArchivingEnabled %}
                             <option selected="1" value="0">{{ 'SegmentEditor_AutoArchiveRealTime'|translate }} {{ 'General_DefaultAppended'|translate }}</option>
                             {% endif %}
-                            <option {% if not createRealTimeSegmentsIsEnabled and not isBrowserArchivingEnabled %}selected="1"{% endif %} value="1">{{ 'SegmentEditor_AutoArchivePreProcessed'|translate }} </option>
+                            <option {% if not isBrowserArchivingEnabled %}selected="1"{% endif %} value="1">{{ 'SegmentEditor_AutoArchivePreProcessed'|translate }} </option>
                         </select>
                     </strong></div>
 
