adds nonce to language selector in updater / installation

--- a/plugins/LanguagesManager/templates/getLanguagesSelector.twig
+++ b/plugins/LanguagesManager/templates/getLanguagesSelector.twig
@@ -12,6 +12,7 @@
 
     <form action="index.php?module=LanguagesManager&amp;action=saveLanguage" method="post">
         <input type="hidden" name="language" id="language">
+        <input type="hidden" name="nonce" id="nonce" value="{{ nonce }}">
         {# During installation token_auth is not set #}
         {% if token_auth is defined %}<input type="hidden" name="token_auth" value="{{ token_auth }}"/>{% endif %}
     </form>
